--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Website</title>
+  <title>Profile</title>
   <link rel="icon" href="icon.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -12,13 +12,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code&display=swap" rel="stylesheet">
 </head>
 <body>
+  <audio id="bg-music" loop autoplay>
+    <source src="background-music.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
   <div class="container">
     <div class="profile-photo">
       <img src="pfp.png" alt="Фото профиля">
     </div>
     <div class="text">
       <h1>oopshnik 🗿</h1>
-      <p>Welcome to my website!</p>
+      <p>Welcome to my personal space!</p>
     </div>
     <div class="social-buttons">
       <a href="https://github.com/oopshnik" class="social-button">
