--- a/index.html
+++ b/index.html
@@ -3,43 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Website</title>
+  <title>oopshnik!</title>
   <link rel="icon" href="icon.png">
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💾</text></svg>">
+  
 </head>
+
 <body>
-  <audio id="bg-music" loop autoplay>
-    <source src="background-music.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
+
   <div class="container">
     <div class="profile-photo">
-      <img src="pfp.png" alt="Фото профиля">
+      <img src="../assets/pfp.png">
     </div>
     <div class="text">
       <h1>oopshnik 🗿</h1>
-      <p>Welcome to my personal space!</p>
+      <p>Welcome to my personal website!</p>
     </div>
-    <div class="social-buttons">
-      <a href="https://github.com/oopshnik" class="social-button">
-        <i class="fab fa-github"></i>
-      </a>
-      <a href="https://t.me/oopshnik" class="social-button">
-        <i class="fab fa-telegram-plane"></i>
-      </a>
-      <a href="https://discord.com/users/1186159079178108982" class="social-button">
-        <i class="fab fa-discord"></i>
-      </a>
-      <a href="#money" class="social-button"> 
-        <i class="fas fa-money-bill-wave"></i>
-      </a>
-    </div>
-    <div id="money">
-      <h1 class="hidden-text">TON: UQDpSbFr6Uty6nrRNbZmCXCcBhBES75wmAPDLmDJ3YTz7EQZ</h1>
+    <div class="icons">
+            <a href="https://t.me/notprogr" target="_blank">
+                <span class="material-icons icon-telegram">telegram</span>
+            </a>
+            <a href="https://discordapp.com/users/" target="_blank">
+                <span class="material-icons icon-discord">discord</span>
+            </a>
+            <a href="mailto:testemail" target="_blank">
+                <span class="material-icons icon-email">email</span>
+            </a>
+        </div>
     </div>
   </div>
 </body>
