--- a/index.html
+++ b/index.html
@@ -1,38 +1,29 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>oopshnik!</title>
-  <link rel="icon" href="icon.png">
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💾</text></svg>">
-  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>oopshnik!</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💾</text></svg>">
+    <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code&family=Consolas&family=JetBrains+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
-
 <body>
+    <div class="container">
+        <h1>oopshnik!</h1>
+        <h2>Bio:</h2>
+        <h3></i> Python & Golang Developer<br>
+            Frontend Enthusiast<br>
+        </h3>
 
-  <div class="container">
-    <div class="profile-photo">
-      <img src="../assets/pfp.png">
+        <i class="fab fa-python"></i>
+        <i class="fab fa-golang"></i>
+        <i class="fab fa-html5"></i>
+        <i class="fab fa-css3-alt"></i>
+        <h2><a href="/contacts/index.html">Contacts Page</a></h2>
+        <h2><a href="/devices/index.html">My Devices Specifications</a></h2>
+
     </div>
-    <div class="text">
-      <h1>oopshnik 🗿</h1>
-      <p>Welcome to my personal website!</p>
-    </div>
-    <div class="icons">
-            <a href="https://t.me/notprogr" target="_blank">
-                <span class="material-icons icon-telegram">telegram</span>
-            </a>
-            <a href="https://discordapp.com/users/" target="_blank">
-                <span class="material-icons icon-discord">discord</span>
-            </a>
-            <a href="mailto:testemail" target="_blank">
-                <span class="material-icons icon-email">email</span>
-            </a>
-        </div>
-    </div>
-  </div>
 </body>
 </html>
