--- a/index.html
+++ b/index.html
@@ -1,29 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oopshnik!</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💾</text></svg>">
-    <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code&family=Consolas&family=JetBrains+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>oopshnik offical website</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎯</text></svg>">
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>oopshnik!</h1>
-        <h2>Bio:</h2>
-        <h3></i> Python & Golang Developer<br>
-            Frontend Enthusiast<br>
-        </h3>
+  <div class="container">
+    <header>
+      <h1>oopshnik</h1>
+    </header>
 
-        <i class="fab fa-python"></i>
-        <i class="fab fa-golang"></i>
-        <i class="fab fa-html5"></i>
-        <i class="fab fa-css3-alt"></i>
-        <h2><a href="/contacts/index.html">Contacts Page</a></h2>
-        <h2><a href="/devices/index.html">My Devices Specifications</a></h2>
+    <section class="intro">
+      <h2>Ку </h2>
+      <p>это как бы мой сайт<br></p>
+      <ul>
+        <li>Меня зовут Василий</li>
+        <li>Живу на Марсе</li>
+        <li></li>
+      </ul>
+    </section>
 
-    </div>
+    <section class="links">
+      <h3>Соцсети:</h3>
+      <ul>
+        <li><a href="https://t.me/oopshnik" target="_blank">Telegram</a></li>
+        <li><a href="https://discordapp.com/users/1186159079178108982" target="_blank">Discord</a></li>
+        <li><a href="https://github.com/oopshnik" target="_blank">Github</a></li>
+        <li><a href="https://matrix.to/#/@oopshnik:matrix.org" target="_blank">Matrix</a></li>
+        <li><a href="mailto:oopshnik.dev@proton.me" target="_blank">Почта</a></li>
+        <p>oopshnik.dev@proton.me (если ссылка на почту не работает) <br>в основном ник @oopshnik</p>
+      </ul>
+    </section>
+
+    <section class="devices">
+      <h3>Девайсы:</h3>
+      <ul>
+        <li>🖱️ Мышь- Lenovo ThinkPlus Wireless Ergonomic (<a href="https://www.ebay.com/itm/334756229113">ссылка</a>)</li>
+        <li>⌨️ Клавиатура - HyperX Alloy MKW 100(<a href="https://hyperx.com/products/hyperx-alloy-mkw100">ссылка</a>)</li>
+        <li>🎧 Наушники - JBL Tune 510bt  (<a href="https://www.jbl.com/halloween-sale/TUNE510BT-.html">ссылка</a>)</p></li>
+        <li>🎙️ Микрофон - нету :/</li>
+        <li>🖥️ All-in-One PC - Lenovo ThinkCentre Neo 30a Gen 4 (<a href="https://shop.lenovo.com/product/12JYA01000/">ссылка</a>)</li>
+        <li>⚙️ Процессор - 13th Gen Intel(R) Core(TM) i7-13620H 2.40 GHz (<a href="https://www.intel.com/content/www/us/en/products/sku/232130/intel-core-i713620h-processor-24m-cache-up-to-4-90-ghz/specifications.html">ссылка</a>)</li>
+        <li>⚡ GPU`шка -  Intel(R) UHD Graphics (<a href="https://www.intel.com/content/www/us/en/support/products/197533/graphics/processor-graphics/intel-uhd-graphics-family/intel-uhd-graphics-for-10th-gen-intel-processors.html">ссылка</a>)</p>
+        <li>📞 Телефон -  Samsung Galaxy A22 (<a href="https://www.gsmarena.com/samsung_galaxy_a22-10948.php">ссылка</a>)</li>
+
+
+      </ul>
+    </section>
+
+    <footer>
+      <p>The end.</p>
+    </footer>
+  </div>
 </body>
 </html>
