--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <ul>
         <li>Меня зовут Василий</li>
         <li>Живу на Марсе</li>
+        <li>😎 Python & Go Developer</li>
+        <li>🌱 Frontend enjoyer</li>
+        <li></li>
         <li></li>
       </ul>
     </section>
