--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>oopshnik offical website</title>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎯</text></svg>">
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
   <div class="container">
@@ -22,8 +22,11 @@
         <li>Живу на Марсе</li>
         <li>😎 Python & Go Developer</li>
         <li>🌱 Frontend enjoyer</li>
-        <li></li>
-        <li></li>
+        <li>🐧 Linux User</li>
+
+        <li><a href="./posts.html">🤓 Блог и т.д на страничке</a></li>
+        
+
       </ul>
     </section>
 
@@ -31,6 +34,7 @@
       <h3>Соцсети:</h3>
       <ul>
         <li><a href="https://t.me/oopshnik" target="_blank">Telegram</a></li>
+        <li><a href="https://t.me/pregr_telegram" target="_blank">Telegram Канал</a></li>
         <li><a href="https://discordapp.com/users/1186159079178108982" target="_blank">Discord</a></li>
         <li><a href="https://github.com/oopshnik" target="_blank">Github</a></li>
         <li><a href="https://matrix.to/#/@oopshnik:matrix.org" target="_blank">Matrix</a></li>
@@ -42,7 +46,7 @@
     <section class="devices">
       <h3>Девайсы:</h3>
       <ul>
-        <li>🖱️ Мышь- Lenovo ThinkPlus Wireless Ergonomic (<a href="https://www.ebay.com/itm/334756229113">ссылка</a>)</li>
+        <li>🖱️ Мышь - Lenovo ThinkPlus Wireless Ergonomic (<a href="https://www.ebay.com/itm/334756229113">ссылка</a>)</li>
         <li>⌨️ Клавиатура - HyperX Alloy MKW 100(<a href="https://hyperx.com/products/hyperx-alloy-mkw100">ссылка</a>)</li>
         <li>🎧 Наушники - JBL Tune 510bt  (<a href="https://www.jbl.com/halloween-sale/TUNE510BT-.html">ссылка</a>)</p></li>
         <li>🎙️ Микрофон - нету :/</li>
